--- a/src/assets/css/layout/body.styl
+++ b/src/assets/css/layout/body.styl
@@ -6,6 +6,12 @@ body
   max-width 1000px
   padding 0 20px
   margin 0 auto
+
+h1
+	font-size: 1.6em;
+	font-weight: bold;
+	color: $orange-flame-pea;
+	margin: 15px 0
   
 h2
 	font-size: 1.3em;
