Add quality css

--- a/src/components/PostsListItem/PostsListItem.styl
+++ b/src/components/PostsListItem/PostsListItem.styl
@@ -21,3 +21,14 @@
 			margin 20px 0
 		.posts-list-item-legend__tagline
 			margin: 10px
+		.posts-list-item-legend-topic
+			.posts-list-item-legend-topic__legend
+				padding: 10px
+			.posts-list-item-legend-topic-list__item
+				display: inline-block
+				padding: 10px
+				margin: 5px
+				background-color: $orange-flame-pea
+				text-transform: uppercase
+				a
+					color: $white
